tests/snapshots/cli__run_file@main_empty.gleam.snap
---
source: tests/cli.rs
expression: "format!(\"STDOUT\\n{out}\\nSTDERR\\n{err}\")"
input_file: tests/inputs/main_empty.gleam
---
STDOUT
Error at main_empty.main:1
  `todo` expression evaluated. This code has not yet been implemented.

STDERR
warning: Unimplemented function
  ┌─ /src/main_empty.gleam:1:1
  │
1 │ pub fn main() {}
  │ ^^^^^^^^^^^^^ This code is incomplete

This code will crash if it is run. Be sure to finish it before
running your program.
