tests/snapshots/cli__run_images@radial_star1.gleam.snap
---
source: tests/cli.rs
expression: "format!(\"{out}\")"
input_file: tests/images/radial_star1.gleam
---
<svg width="118.25658016144473" height="118.25658016144476" xmlns="http://www.w3.org/2000/svg">
  <polygon points="118.25658016144472,34.636550409356616 67.12829008072237,59.12829008072236 118.25658016144472,83.6200297520881 64.78514433021475,64.78514433021473 83.62002975208812,118.2565801614447 59.128290080722365,67.12829008072237 34.63655040935662,118.2565801614447 53.47143583122998,64.78514433021473 1.4210854715202004e-14,83.62002975208812 51.128290080722365,59.12829008072236 0.0,34.636550409356644 53.47143583122998,53.47143583122998 34.63655040935664,0.0 59.128290080722365,51.12829008072236 83.62002975208813,1.4210854715202004e-14 64.78514433021475,53.471435831229975 118.25658016144473,34.63655040935663 67.12829008072237,59.12829008072236 118.25658016144473,83.62002975208806 64.78514433021475,64.78514433021473 83.6200297520881,118.25658016144472 59.128290080722365,67.12829008072237 34.636550409356715,118.25658016144476 53.47143583122998,64.78514433021473 3.552713678800501e-14,83.62002975208816 51.128290080722365,59.12829008072236 1.4210854715202004e-14,34.63655040935661 53.47143583122999,53.471435831229975 34.63655040935657,2.842170943040401e-14 59.128290080722365,51.12829008072236 83.62002975208812,7.105427357601002e-15 64.78514433021475,53.47143583122998" fill="rgba(47, 79, 79, 1.0)" />
</svg>
